# random

./: .gitignore  Compo.java  README.md  Untitled Diagram.xml  a11y.py  bitcount.rs  break.py  cflow.rs  const.rs  defaultoption.rs  destruct.rs  dojo.py  drag-and-drop.html  ebooks.py  ebooks.xml  ebooks2.xml  exename.rs  find_exe.rs  genreturn.rs  hashlist.py  pyparsers.py  resman.py  specgen.rs  spongebob.py  spongebob.rs  tee.py  telinet.py  threadjoin.py  unspace.sh  while.rs
abstractclasstest/: Cargo.toml  README.md
abstractclasstest/src/: main.rs
actorstest/: Cargo.toml  README.md
actorstest/src/: actor.rs  actor_1.rs  main.rs
andthenchaintest/: Cargo.toml
andthenchaintest/src/: main.rs
anstreamtest/: Cargo.toml
anstreamtest/src/: main.rs
asyncnext/: Cargo.toml  README.md
asyncnext/src/: main.rs
axumtest/: Cargo.toml
axumtest/src/: main.rs
axumtest/src/auth/: mod.rs
axumtest/src/cases/: mod.rs
axumtest/src/collections/: mod.rs
axumtest/src/entities/: mod.rs
axumtest/src/header/: mod.rs
axumtest/src/headers/: cipwd.rs  cirole.rs  ciusr.rs  mod.rs
blockontest/: Cargo.toml  README.md
blockontest/src/: main.rs
canonicalcurrentdirtest/: Cargo.toml  README.md
canonicalcurrentdirtest/src/: main.rs
canonicalizetest/: Cargo.toml  README.md
canonicalizetest/src/: main.rs
capresulttest/: Cargo.toml  README.md
capresulttest/src/: main.rs
channeltest/: Cargo.toml  README.md
channeltest/src/: main.rs
chartstest/: Cargo.toml  README.md
chartstest/src/: main.rs
check-uuid/: Cargo.toml
check-uuid/src/: main.rs
chronotest/: Cargo.toml
chronotest/src/: main.rs
claptest/: Cargo.toml
claptest/src/: main.rs
closure/src/: main.rs
commandtest/: Cargo.toml  README.md
commandtest/src/: main.rs  the_script.sh
componenttest/: Cargo.toml  README.md
componenttest/src/: main.rs
condvartest/: Cargo.toml  README.md
condvartest/src/: beacon.rs  main.rs
cons/: Cargo.toml  README.md
cons/src/: main.rs
containstest/: Cargo.toml  README.md
containstest/src/: main.rs
crosstermtest/: Cargo.toml
crosstermtest/src/: main.rs
cxxtest/: Cargo.toml  build.rs
cxxtest/src/: main.rs
decimaltest/: Cargo.toml
decimaltest/src/: main.rs
dieseltest/: .env  Cargo.toml  README.md
dieseltest/src/: main.rs  models.rs  schema.rs
diritertest/: Cargo.toml  README.md
diritertest/src/: diriter.rs  main.rs
djangochildformtest/child/: db.sqlite3  manage.py
dontcollectresulttest/: Cargo.toml  README.md
dontcollectresulttest/src/: main.rs
globtest/: Cargo.toml  README.md
globtest/src/: main.rs
helloworld-tonic/: Cargo.toml
helloworld-tonic/src/: main.rs
html5test/: Cargo.toml  README.md
html5test/src/: main.rs
internetiterator/: Cargo.toml  README.md
internetiterator/src/: main.rs
lite/: lite.py
logostest/: Cargo.toml
logostest/src/: example.foam  main.rs
mapoptiontest/: Cargo.toml  README.md
movereftest/: Cargo.toml  README.md
ms/: Cargo.toml  README.md
ms/server/: Cargo.toml
ms/server/src/: main.rs
ms/txtclient/: Cargo.toml
ms/txtclient/src/: main.rs
neverclap/: Cargo.toml
nomfoamtest/: Cargo.toml
notifytest/: Cargo.toml  README.md
notifytest/migrations/: 202201281050_initial.sql  202201281127_fix_function.sql  202201281128_fix2.sql  202201281133_fix3.sql  202201281134_fix4.sql
notifytest/src/: main.rs
on-prelude/: Cargo.toml
palindrome/: palindrome.py
parser/: bairros.py
pathextractiontest/: Cargo.toml  README.md
pestfoamtest/: Cargo.toml  README.md
pestgroupstest/: Cargo.toml  README.md
pesttokiotest/: Cargo.toml  README.md  example.csv
pesttokiotest/src/: csv.pest  main.rs
plotterstest/: Cargo.toml  README.md
prodconrs/: Cargo.toml
ratatuitest/: Cargo.toml
resultteststest/: Cargo.toml  README.md
richtest/: main.py  pyproject.toml
rwlocktest/: Cargo.toml
serdedyn/: Cargo.toml  README.md
shlextest/: Cargo.toml
sled-test/: Cargo.toml
slytest/: README.md  pyproject.toml  slytest.py
sparse-checkout/: README.md  pyproject.toml  sc.py
spmc-test/: Cargo.toml
sqlxany/: Cargo.toml
sqlxany/src/: entity.rs  main.rs
sqlxtest/: Cargo.toml
sqlxtest/db/migrations/: 202105261221_create_table.sql  202202110959_enums.sql
sqlxtest/src/: main.rs
structsubgroup/: Cargo.toml  README.md
subcommand/: Cargo.toml
synctracingtest/: Cargo.toml  README.md
tokiobroadcast/: Cargo.toml
tokiocommandtimeouttest/: Cargo.toml  README.md
tokioselect/: Cargo.toml
tokiosemaphoretest/: Cargo.toml
tokiosendrecv/: Cargo.toml
tokiosharedruntime/: Cargo.toml
tokiostdoutstderrtest/: Cargo.toml  README.md
tokiostreamtest/: Cargo.toml  README.dm
tokiounixsocket/: Cargo.toml
tokiounixsocket/src/: main.rs
toml-groups/: Cargo.toml
transformertest/: Cargo.toml  README.md
transformertest/src/: main.rs  transformer.rs
trynoterrortest/: Cargo.toml  README.md
yielddirs/: Cargo.toml  README.md
(+47 files in other folders)
