[package]
name = "axumtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["headers"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
