[package]
name = "claptest"
version = "0.1.0"
edition = "2021"
author = "Julio Biason <julio.biason@pm.me>"
about = "Simple test of Clap derive way"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
