[package]
name = "notifytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive", "env"] }
env_logger = "0.9.0"
log = "0.4.14"
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "migrate", "macros"] }
tokio = { version = "1.16.1", features = ["rt", "net", "macros", "io-util"] }
