[package]
name = "pesttokiotest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
tokio = { version = "1.35.1", features = ["rt", "macros", "fs"] }
tokio-macros = "2.2.0"
