[tool.poetry]
name = "sparse-checkout"
version = "0.1.0"
description = ""
authors = ["Julio Biason <julio.biason@pm.me>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pyright = "^1.1.283"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
