[package]
name = "sqlxany"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "macros", "migrate"] }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
