[package]
name = "server"
description = "A server that keeps producing content and sends them to connected clients"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.14.0", features = ["rt", "net", "macros", "sync", "time", "io-util"] }

shared = { path = "../shared" }
