[package]
name = "txtclient"
description = "A client that keeps listened to whatever the server is producing and shows on stdout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.14.0", features = ["rt", "net", "macros", "io-util"] }

shared = { path = "../shared" }
